--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Week 1 Day 1 - Homework</title>
+	<title>Javascript Lab</title>
 </head>
 <body>
-	<h1>Intro to JS Homework</h1>
+	<h1>Intro to JS Lab Work</h1>
 	<script src="./main.js"></script>
 </body>
 </html>
